src/test/deca/syntax/parser/invalid/if_without_cond.deca
// Parser test, if without condition

{
    if {
        print(5);
    }
}